--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             from { opacity: 0; }
             to { opacity: 1; }
         }
+        /* Fix for mobile Safari height issues */
+        .min-h-screen {
+            min-height: -webkit-fill-available;
+        }
     </style>
 <script type="importmap">
 {
